--- a/index.html
+++ b/index.html
@@ -11,32 +11,37 @@
   </head>
   <body>
     <div class="container">
-      <input type="text" />
+      <input type="text" class="input" />
 
       <div class="buttons">
         <div class="row1">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>4</button>
+          <button class="one">1</button>
+          <button class="two">2</button>
+          <button class="three">3</button>
+          <button class="four">4</button>
         </div>
         <div class="row2">
-          <button>5</button>
-          <button>6</button>
-          <button>7</button>
-          <button>8</button>
+          <button class="five">5</button>
+          <button class="six">6</button>
+          <button class="seven">7</button>
+          <button class="eight">8</button>
         </div>
         <div class="row3">
-          <button>9</button>
-          <button>0</button>
-          <button>.</button>
-          <button>=</button>
+          <button class="nine">9</button>
+          <button class="zero">0</button>
+          <button class="dot">.</button>
+          <button class="equal">=</button>
         </div>
         <div class="row4">
-          <button>-</button>
-          <button>+</button>
-          <button>÷</button>
-          <button>x</button>
+          <button class="sub">-</button>
+          <button class="add">+</button>
+          <button class="divide">÷</button>
+          <button class="multiply">x</button>
+        </div>
+        <div class="row4">
+          <button class="openbracket">(</button>
+          <button class="closebracket">)</button>
+          <button class="clear">Clear</button>
         </div>
       </div>
     </div>
